--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Amazing app to help you find nearest MBTA station</title>
+    <title>Find the nearest MBTA station to you!</title>
 </head>
 <body>
 
